# stateright

./: Cargo.toml  flake.nix
examples/: 2pc.rs  increment.rs  increment_lock.rs  linearizable-register.rs  panic.rs  paxos.rs  single-copy-register.rs  timers.rs
src/: checker.rs  job_market.rs  lib.rs  report.rs
src/actor/: model.rs  spawn.rs
src/checker/: bfs.rs  dfs.rs  explorer.rs  on_demand.rs  path.rs  simulation.rs  visitor.rs
