[package]
name = "stateright"
version = "0.30.0"
authors = ["Jonathan Nadal <jon.nadal@gmail.com>"]
license = "MIT"
edition = "2021"

description = "A model checker for implementing distributed systems."
homepage = "https://www.stateright.rs"
repository = "https://github.com/stateright/stateright"
readme = "README.md"
categories = ["algorithms", "concurrency", "development-tools", "network-programming", "simulation"]
keywords = ["actor", "model-checking", "paxos", "raft", "simulation"]

[dependencies]
ahash = "0.8.3"
choice = "0.0.2"
crossbeam-utils = "0.8.16"
dashmap = "5.5.0"
id-set = "0.2.2"
log = "0.4"
nohash-hasher = "0.2.0"
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["rc", "derive"] }

# explorer
tiny_http = { version = "0.12.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
env_logger = "0.10"
lazy_static = "1.4.0"
num_cpus = "1.16"
pico-args = "0.5"
serde_json = "1.0"

[features]
default = ["explorer"]
explorer = ["dep:tiny_http", "dep:serde_json"]
